infrastructure/01-system/grafana/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana-security
  namespace: grafana
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8089"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": grafana

  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": loki
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "3100"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": mimir
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": tempo
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": notifications
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
            - port: "8025"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": auth
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: "auth.foobarbaz.fr"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
